# robotics

./: .gitignore  CONSOLIDATION-CHANGELOG.md  LICENSE  README.md  TECHNICAL_GUIDE.md  VLA_Scale_ML_Infra.md  index.html  pyproject.toml
.github/workflows/: pages.yml
RL-Pendulum/: .gitignore  README.md  TECHNICAL_GUIDE.md  presentation.html  ref.md  requirements.txt  setup.py
RL-Pendulum/configs/: ppo_config.yaml
RL-Pendulum/envs/: __init__.py  pendulum_env.py
RL-Pendulum/evaluation/: evaluate.py
RL-Pendulum/export/: __init__.py  export_onnx.py
RL-Pendulum/firmware/: README.md
RL-Pendulum/firmware/inference_loop/: inference_loop.ino  motor_driver.h
RL-Pendulum/scripts/: export_model.sh  run_training.sh
RL-Pendulum/tests/: test_env.py  test_export.py
RL-Pendulum/training/: __init__.py  callbacks.py  train.py
Semantic-SLAM-Rover/: index.html  ref.md
Semantic-SLAM-Rover/docker/: Dockerfile.jetson  docker-compose.yml
Semantic-SLAM-Rover/ros2_ws/src/rover_bringup/: CMakeLists.txt
Semantic-SLAM-Rover/ros2_ws/src/rover_bringup/config/: rover_params.yaml
Semantic-SLAM-Rover/ros2_ws/src/rover_bringup/launch/: rover_full_bringup.launch.py
Semantic-SLAM-Rover/ros2_ws/src/rover_bringup/rviz/: semantic_slam.rviz
Semantic-SLAM-Rover/ros2_ws/src/rover_fusion/: setup.cfg  setup.py
Semantic-SLAM-Rover/ros2_ws/src/rover_fusion/rover_fusion/: fusion_node.py  landmark_tracker.py  projection_math.py
Semantic-SLAM-Rover/ros2_ws/src/rover_hardware/: package.xml  setup.cfg
Semantic-SLAM-Rover/ros2_ws/src/rover_hardware/rover_hardware/: esp32_bridge_node.py
Semantic-SLAM-Rover/ros2_ws/src/rover_msgs/: CMakeLists.txt  package.xml
Semantic-SLAM-Rover/ros2_ws/src/rover_msgs/srv/: GetSemanticLandmarks.srv  NavigateToClass.srv
Semantic-SLAM-Rover/ros2_ws/src/rover_navigation/: package.xml
Semantic-SLAM-Rover/ros2_ws/src/rover_navigation/launch/: navigation.launch.py
Semantic-SLAM-Rover/ros2_ws/src/rover_navigation/rover_navigation/: semantic_navigator.py
Semantic-SLAM-Rover/ros2_ws/src/rover_perception/: setup.py
Semantic-SLAM-Rover/ros2_ws/src/rover_perception/rover_perception/: tensorrt_engine.py
Semantic-SLAM-Rover/ros2_ws/src/rover_slam/: CMakeLists.txt
Semantic-SLAM-Rover/ros2_ws/src/rover_slam/config/: slam_toolbox_params.yaml
Semantic-SLAM-Rover/ros2_ws/src/rover_slam/launch/: slam.launch.py
Semantic-SLAM-Rover/tests/integration/: test_full_pipeline.py
Semantic-SLAM-Rover/tests/unit/: test_projection_math.py
Semantic-SLAM-Rover/tools/calibration/: camera_lidar_calibration.py
VLA-bench/: presentation.html  requirements.txt
VLA-bench/.github/workflows/: lint.yml
VLA-bench/data/: synthetic_episodes.py
VLA-bench/training/utils/: __init__.py  metrics.py
data/: prepare_dataset.py
docker/: ros_entrypoint.sh
envs/: domain_randomization.py
evaluation/: __init__.py
export/: quantize.py
firmware/esp32/motor_controller/: motor_controller.ino
firmware/inference_loop/: imu_driver.h
models/: export_tensorrt.py
ros2_ws/src/rover_bringup/: package.xml
ros2_ws/src/rover_fusion/: package.xml
ros2_ws/src/rover_hardware/: setup.py
ros2_ws/src/rover_msgs/msg/: Detection2D.msg  Detection2DArray.msg  SemanticLandmark.msg  SemanticMap.msg
ros2_ws/src/rover_navigation/: setup.py
ros2_ws/src/rover_navigation/config/: nav2_params.yaml
ros2_ws/src/rover_perception/: package.xml  setup.cfg
ros2_ws/src/rover_perception/rover_perception/: yolo_node.py
ros2_ws/src/rover_slam/: package.xml
scripts/: run_baseline.sh  run_optimized.sh
tests/: test_dr.py
tests/unit/: test_landmark_tracker.py  test_tensorrt_engine.py
training/: baseline_train.py  optimized_train.py
training/utils/: profiler_utils.py
urdf/: pendulum_robot.urdf
