<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_bringup</name>
  <version>0.1.0</version>
  <description>Full system launch files and shared parameters for the Semantic SLAM Rover.</description>
  <maintainer email="rover@example.com">Rover Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rover_hardware</exec_depend>
  <exec_depend>rover_perception</exec_depend>
  <exec_depend>rover_fusion</exec_depend>
  <exec_depend>rover_slam</exec_depend>
  <exec_depend>rover_navigation</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
